# cisco-code

./: .gitignore  Cargo.toml  README.md
config/: default.toml
crates/api/: Cargo.toml
crates/api/src/: bedrock.rs  client.rs  cost.rs  lib.rs  oauth.rs  openai.rs  registry.rs  sse.rs  types.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/src/tui/: app.rs  input.rs  mod.rs  render.rs  widgets.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: client.rs  jsonrpc.rs  lib.rs  transport.rs  types.rs
crates/planning/: Cargo.toml
crates/planning/src/: lib.rs  manager.rs  plan.rs
crates/plugin/: Cargo.toml
crates/plugin/src/: discovery.rs  lib.rs  loader.rs  manifest.rs  registry.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: errors.rs  events.rs  lib.rs  messages.rs  tools.rs
crates/providers/: Cargo.toml
crates/providers/src/: anthropic.rs  lib.rs  openai.rs  openai_compat.rs  registry.rs  routing.rs
crates/runtime/: Cargo.toml
crates/runtime/bundled_skills/: cisco-code-guide.md  claude-api.md  code-review.md  commit.md  docx.md  frontend-design.md  init-project.md  loop.md  pdf.md  plan.md  pptx.md  remember.md  simplify.md  update-config.md  verify.md
crates/runtime/src/: channels.rs  commands.rs  compact.rs  config.rs  conversation.rs  cron.rs  event_bus.rs  hooks.rs  lib.rs  memory.rs  microcompact.rs  notify.rs  permissions.rs  prompt.rs  prompt_sections.rs  router.rs  session.rs  store.rs  store_sqlite.rs  streaming_executor.rs  subagent.rs  tasks.rs  worktree.rs
crates/runtime/src/channels/: channel.rs  manager.rs  mod.rs  repl.rs  slack.rs  webex.rs
crates/sandbox/: Cargo.toml
crates/sandbox/src/: lib.rs  profile.rs
crates/sandbox/src/platform/: container.rs  linux.rs  macos.rs  mod.rs
crates/server/: Cargo.toml
crates/server/src/: executor.rs  jobs.rs  lib.rs  provider_factory.rs  routes.rs  state.rs  streaming.rs  websocket.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: audit.rs  export.rs  lib.rs  metrics.rs  spans.rs
crates/tools/: Cargo.toml
crates/tools/src/: agent.rs  apply_patch.rs  bash.rs  config_tool.rs  cron_tools.rs  edit.rs  glob.rs  grep.rs  lib.rs  lsp.rs  mcp_tool.rs  notebook.rs  plan.rs  read.rs  send_message.rs  skill.rs  sleep.rs  task_tools.rs  todo_tool.rs  tool_search.rs  web_fetch.rs  web_search.rs  worktree_tool.rs  write.rs
crates/tools/src/cisco/: mod.rs  slack.rs  webex.rs
docs/comparisons/: 00-architectural-comparison.md  01-claude-code-internals.md  02-codex-internals.md  03-claw-code-parity-analysis.md  04-four-way-comparison.md
docs/design/: 01-grand-design.md  02-implementation-roadmap.md  03-why-pure-rust.md  04-server-architecture.md  05-competitive-parity-plan.md
tests/e2e/: Cargo.toml
tests/e2e/src/: lib.rs
tests/e2e/src/helpers/: assertions.rs  mod.rs  provider.rs  runtime.rs  workspace.rs
tests/e2e/tests/: test_api_bedrock.rs  test_error_handling.rs  test_multi_turn.rs  test_runtime_simple.rs  test_tool_use.rs
