[workspace]
resolver = "2"
members = [
    "crates/cli",
    "crates/runtime",
    "crates/tools",
    "crates/sandbox",
    "crates/api",
    "crates/providers",
    "crates/planning",
    "crates/mcp",
    "crates/protocol",
    "crates/telemetry",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Cisco AI Infrastructure Team"]
description = "cisco-code: An enterprise AI coding agent"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# HTTP & networking
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }

# CLI & TUI
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3"
regex = "1"
tempfile = "3"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
