[package]
name = "cisco-code-mcp"
version.workspace = true
edition.workspace = true

[dependencies]
cisco-code-protocol = { path = "../protocol" }
tokio.workspace = true
futures.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true

[lints]
workspace = true
