[package]
name = "cisco-code-plugin"
version.workspace = true
edition.workspace = true

[dependencies]
cisco-code-protocol = { path = "../protocol" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
glob.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
