[package]
name = "cisco-code-providers"
version.workspace = true
edition.workspace = true

[dependencies]
cisco-code-protocol = { path = "../protocol" }
cisco-code-api = { path = "../api" }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true

[lints]
workspace = true
