[package]
name = "cisco-code-tools"
version.workspace = true
edition.workspace = true

[dependencies]
cisco-code-protocol = { path = "../protocol" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
glob.workspace = true
regex.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
reqwest.workspace = true
async-trait.workspace = true
uuid.workspace = true
base64.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
